correctly right-align in the same line

--- a/main.css
+++ b/main.css
@@ -33,7 +33,7 @@ body {
 .main-nav {
   display: inline-block;
   text-align: right;
-  width: calc(100% - 49px);
+  width: calc(100% - 54px);
 }
 
 .main-header > div {
